<resources>
    <string name="app_name">astroybat</string>
    <string name="Add_button">+</string>
    <string name="edit_smeta">Редактировать смету</string>
    <string name="title">Имя сметы</string>
    <string name="zakazchik">Заказчик</string>
    <string name="podryadchik">Подрядчик</string>
    <string name="object">Объект</string>
    <string name="raboti">Работы</string>
    <string name="osnovanie">Основание</string>
    <string name="edit_context">Редактировать смету</string>
    <string name="delete">Удалить смету</string>
    <string name="save_edited_smeta_button">Сохранить</string>
    <string name="back_to_MainActivity">Назад</string>
    <string name="title_activity_smeta_content_table">smeta_content_table</string>
    <string name="Smeta_title">Новая смета</string>
    <string name="full_item_title">igjigdjopbmpmdbpomopmopmpobmp</string>
    <string name="item_title"><u>Название: </u></string>
    <string name="item_unit"><u>Ед.измерения: </u></string>
    <string name="item_price"><u>Стоимость(1 ед.): </u></string>
    <string name="item_amount"><u>Количество: </u></string>
    <string name="item_overall">Итого: </string>
    <string name="amount_plus_button">+</string>
    <string name="amount_minus_button">-</string>
    <string name="date">Дата</string>
    <string name="add_item_materials">Материалы</string>
    <string name="add_item_services">Услуги</string>
    <string name="print">print</string>

</resources>