<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/print"
        android:icon="@drawable/baseline_print_20"
        android:title="@string/print"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_button"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/Add_button"
        android:visible="true"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/add_materials"
                android:title="@string/add_item_materials" />
            <item
                android:id="@+id/add_services"
                android:title="@string/add_item_services" />
        </menu>
    </item>

</menu>
