<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/full_item_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/full_item_title"
        android:textAllCaps="true"
        android:textSize="17sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/item_title"
        android:textSize="25sp"

        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/full_item_title"
        android:autofillHints="" />

    <TextView
        android:id="@+id/item_unit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/item_unit"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/item_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/item_price"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/item_unit"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/item_amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/item_amount"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/item_price"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="58dp" />

    <TextView
        android:id="@+id/item_overall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="232dp"
        android:text="@string/item_overall"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/item_amount" />

    <Button
        android:id="@+id/amount_plus"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:text="@string/amount_plus_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="@+id/item_amount"
        app:layout_constraintTop_toBottomOf="@+id/item_price" />

    <Button
        android:id="@+id/amount_minus"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:text="@string/amount_minus_button"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="@+id/item_amount"
        app:layout_constraintTop_toBottomOf="@+id/item_price" />

</androidx.constraintlayout.widget.ConstraintLayout>